--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,13 @@
 [project]
 name = "sik-stochastic-tests"
-version = "0.0.19"
+version = "0.0.25"
 description = "A pytest plugin for testing stochastic systems like LLMs, providing statistical confidence through multiple test runs."
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "pytest-asyncio>=0.25.3",
     "pytest>=8.3.4",
+    "nest-asyncio>=1.6.0",
 ]
 
 [dependency-groups]
